--- a/index.html
+++ b/index.html
@@ -2,30 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Fylo data storage component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+<div class="main-container">
 
-  You’ve used 815 GB of your storage
-
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container item1">
+    <img src="./images/logo.svg" alt="logo">
+    <div class="icons-container">
+      <div class="icon">
+        <img src="./images/icon-document.svg" alt="document">
+      </div>
+      <div class="icon">
+        <img src="./images/icon-folder.svg" alt="folder">
+      </div>
+      <div class="icon">
+        <img src="./images/icon-upload.svg" alt="upload">
+      </div>
+    </div>
   </div>
+
+  <div class="container item2">
+    <p>
+      You’ve used <span>815 GB</span> of your storage
+    </p>
+
+    <div class="load">
+      <div class="loading">
+        <div class="ball-indicator"></div>
+      </div>
+    </div>
+
+    <div class="number-indicator">
+      <p>0 GB</p>
+      <P>1000 GB</P> 
+    </div>
+
+    <div class="container item3">
+      <span>185</span>
+      <p>GB LEFT</p>
+    </div>
+    </div>
+  </div>
+
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/Jesusmontilla03/BlogPreview-cardMain.github.io.git">Jesus Montilla</a>.
+  </footer>
+
+</div>
 </body>
 </html>
